# petpatron-htmx

./: .gitignore  Cargo.toml  tailwind.config.js
src/: db.rs  main.rs  style.css  templates.rs
templates/: base.html  dog_viewer.html  dogs.html  index.html
